apps/kube-system/cilium-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: manual
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-ui
  name: port-service-cilium
  namespace: kube-system
spec:
  ports:
  - name: cilium-port
    nodePort: 30007
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    k8s-app: hubble-ui
  type: NodePort
