apps/kube-system/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  namespace: kube-system
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "hubble.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- hubble ---
  - host: hubble.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "sonarr.waffle-k8s.local"
    - "radarr.waffle-k8s.local"
    - "plex.waffle-k8s.local"
    - "qbit.waffle-k8s.local"
    - "prowlarr.waffle-k8s.local"
    - "requestrr.waffle-k8s.local"
    - "overseerr.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- Sonarr ---
  - host: sonarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-sonarr
            port:
              number: 8989
  # --- Radarr ---
  - host: radarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-radarr
            port:
              number: 7878
  # --- Plex ---
  - host: plex.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-plex
            port:
              number: 32400
  # --- Qbittorrent ---
  - host: qbit.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-qbit
            port:
              number: 8080
  # --- Overseerr ---
  - host: seerr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-seerr
            port:
              number: 5055
  # --- Prowlarr ---
  - host: prowlarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-prowlarr
            port:
              number: 9696
  # --- Requestrr ---
  - host: requestrr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-requestrr
            port:
              number: 4545

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "homarr.waffle-k8s.local"
    - "grafana.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- Grafana ---
  - host: grafana.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-grafana
            port:
              number: 80
  # --- Homarr ---
  - host: homarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-homarr
            port:
              number: 7575
