apps/kube-system/cilium-network-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-external-nodeport
spec:
  endpointSelector:
    matchLabels:
      exposed: nodeport
  ingress:
  - fromEntities:
    - world
    - host
