apps/kube-system/plex-mTLS.yaml
---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: plex-stack-ingress
  namespace: plex
spec:
  endpointSelector:
    matchExpressions:
# scope of apps to select in the plex namespace
    - key: "app"
      operator: In
      values:
      - plex
      - qbittorrent
      - prowlarr
      - radarr
      - sonarr
      - tdarr-node
      - tdarr-server
      - overseerr
      - requestrr

  ingress:
  # ----------------------------------------------------
  # RULE 1: Internal Media Stack Pods MUST use mTLS
  # ----------------------------------------------------
  - fromEndpoints:
    - matchExpressions:
      - key: "app"
        operator: In
        values:
        - plex
        - qbittorrent
        - prowlarr
        - radarr
        - sonarr
        - tdarr-node
        - tdarr-server
        - overseerr
        - requestrr
    authentication:
      mode: "required"
      
  # ----------------------------------------------------
  # RULE 2: External NodePort traffic (NO mTLS)
  # ----------------------------------------------------
  - fromEntities:
    - world
    - host
    - ingress

  # ----------------------------------------------------
  # RULE 3: Allow these specific apps to talk
  # ----------------------------------------------------
  - fromEndpoints:
    - matchExpressions:
      - key: "app"
        operator: In
        values:
        - qbittorrent
        - prowlarr
        - radarr
        - sonarr
        - tdarr-node
        - tdarr-server
        - overseerr
        - requestrr

---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: monitoring-stack-ingress
  namespace: monitoring
spec:
  endpointSelector:
    matchExpressions:
    - key: "app"
      operator: In
      values:
      - grafana
      - teslamate
      - homarr
  ingress:
  # ----------------------------------------------------
  # RULE 1: Internal Media Stack Pods MUST use mTLS
  # ----------------------------------------------------
  - fromEndpoints:
    - matchExpressions:
      - key: "app"
        operator: In
        values:
      - grafana
      - teslamate
      - homarr
    authentication:
      mode: "required"
  # ----------------------------------------------------
  # RULE 2: External NodePort traffic (NO mTLS)
  # ----------------------------------------------------
  - fromEntities:
    - world
    - host
    - ingress
  # ----------------------------------------------------
  # RULE 3: Allow these specific apps to talk
  # ----------------------------------------------------
  - fromEndpoints:
    - matchExpressions:
      - key: "app"
        operator: In
        values:
      - grafana
      - teslamate
      - homarr
